--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,12 @@ ErrorDocument 404 /404.html
 ErrorDocument 401 /401.html
 ErrorDocument 403 /403.html
 ErrorDocument 500 /500.html
+
+RewriteEngine on
+
+
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
+
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
